--- a/arduino/HeatLamp/.cproject
+++ b/arduino/HeatLamp/.cproject
@@ -24,6 +24,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HeatLamp/Libraries/DallasTemp}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HeatLamp/Libraries/OneWire}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HeatLamp/Libraries/FastLED}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HeatLamp/Libraries/SevSeg}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HeatLamp/Libraries/TimerOne}&quot;"/>
 								</option>
 								<inputType id="it.baeyens.arduino.compiler.cpp.sketch.input.1663035884" name="CPP source files" superClass="it.baeyens.arduino.compiler.cpp.sketch.input"/>
 							</tool>
@@ -34,6 +36,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HeatLamp/Libraries/DallasTemp}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HeatLamp/Libraries/OneWire}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HeatLamp/Libraries/FastLED}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HeatLamp/Libraries/SevSeg}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/HeatLamp/Libraries/TimerOne}&quot;"/>
 								</option>
 								<inputType id="it.baeyens.arduino.compiler.c.sketch.input.1665657989" name="C Source Files" superClass="it.baeyens.arduino.compiler.c.sketch.input"/>
 							</tool>
